--- a/src/main/webapp/stylesheets/style.css
+++ b/src/main/webapp/stylesheets/style.css
@@ -141,11 +141,19 @@ body{
 }
 
 .register-container{
-    min-height: 95vh;
+    height: 95vh;
     background-color: white;
     width: 50%;
     margin: 0 25% 0 25%;
 }
+
+.search-container{
+    height: calc(100vh - 50px);
+    background-color: white;
+    width: 50%;
+    margin: 0 25% 0 25%;
+}
+
 .table-container{
     width: 70%;
     margin: 20px 15% 0 15%;
@@ -158,7 +166,17 @@ body{
 /*search*/
 
 .sortFilterPanel{
-    width: 100vmin;
-    height: 200px;
-    background-color: #00b3ee;
+    padding: 10px;
+    position: fixed;
+    left: 31%;
+    right: 31%;
+}
+
+/*student-page*/
+
+.filter-panel{
+    font-size: 14pt;
+    vertical-align: middle;
+    padding: 5px;
+    background-color: white;
 }
