added authorisation filter, created a couple of custom exceptions, partly added localization

--- a/src/main/webapp/stylesheets/style.css
+++ b/src/main/webapp/stylesheets/style.css
@@ -90,6 +90,7 @@ body{
     min-height: 95vh;
 }
 
+
 /*profile*/
 .avatar{
     min-width: 256px;
@@ -179,4 +180,9 @@ body{
     vertical-align: middle;
     padding: 5px;
     background-color: white;
+}
+
+.student-page-container{
+    min-height: calc(100vh - 70px);
+    height: 100%;
 }
